💄 Fix margins being too small for some mobile views

--- a/src/TabbedView.css
+++ b/src/TabbedView.css
@@ -90,8 +90,8 @@
   animation-delay: 0.5s;
   animation-timing-function: linear;
   animation-fill-mode: forwards;
-  margin-top: -1000px;
-  transform: translateY(1000px);
+  margin-top: -10000px;
+  transform: translateY(10000px);
 }
 
 .panel-fixed {
